content/manual/v8.0/source/includes/tutorials/language-id.rst
.. tabs-drivers::

   .. tab::
      :tabid: java-sync

      .. code-block:: java

         // You are viewing the Java synchronous driver code examples.
         // Use the dropdown menu to select a different driver.

   .. tab::
      :tabid: nodejs

      .. code-block:: javascript

         // You are viewing the Node.js driver code examples.
         // Use the dropdown menu to select a different driver.

   .. tab::
      :tabid: python

      .. code-block:: python

         # You are viewing the Python driver code examples.
         # Use the dropdown menu to select a different driver.

   .. tab::
      :tabid: csharp

      .. code-block:: csharp

         // You are viewing the .NET/C# driver code examples.
         // Use the dropdown menu to select a different driver.

   .. tab::
      :tabid: go

      .. code-block:: go

         // You are viewing the Golang driver code examples.
         // Use the dropdown menu to select a different driver.

      .. important::

         When building or running the Golang code in this guide using 
         ``go build`` or ``go run``, always include the ``cse`` build 
         constraint to enable {+csfle-abbrev+}. See the following shell
         command for an example of including the build constraint:

         .. code-block:: bash 

            go run -tags cse insert-encrypted-document.go
